# rookcli

./: Cargo.toml  README.md
src/: app.rs  events.rs  k8s.rs  main.rs  ui.rs
